# kd-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: kd-attach.sh  kd-hang.py  kd-reset.sh  kd-resume.sh  kd-test.sh  kd-unfreeze.sh  kdcall.py
src/kd_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
